--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "devDependencies": {
     "@adonisjs/assembler": "^3.0.6",
     "adonis-preset-ts": "^2.0.0",
+    "get-port": "^5.1.1",
+    "japa": "^3.1.1",
     "pino-pretty": "^4.7.0",
+    "sinon": "^9.2.4",
     "typescript": "^4.1.5",
     "youch": "^2.1.1",
     "youch-terminal": "^1.0.1"
@@ -18,6 +21,8 @@
   "dependencies": {
     "@adonisjs/core": "^5.0.4-preview-rc-2.1",
     "@adonisjs/repl": "^1.1.6",
+    "axios": "^0.21.1",
+    "node-fetch": "^2.6.1",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
